--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
+    "@types/styled-components": "^5.1.26",
+    "axios": "^1.3.3",
+    "firebase": "^9.17.1",
     "next": "12.3.1",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.2",
+    "react-toastify": "^9.1.1",
+    "styled-components": "^5.3.6",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
