--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "firebase": "^9.17.1",
     "next": "12.3.1",
     "nookies": "^2.5.2",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
+    "react-switch": "^7.0.0",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "yup": "^1.0.2"
