--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-NEXT_PUBLIC_BASE_URL_API=http://localhost:3333/api
+NEXT_PUBLIC_BASE_URL_API=https://unilinkapi.onrender.com/api
+NEXT_PUBLIC_BASE_URL_API2=http://localhost:3333/api
 
 NEXT_PUBLIC_apiKey=AIzaSyAV0S6rv5th3Iy_lx__uXf72vZxsMT418I
 NEXT_PUBLIC_authDomain=single-link-88071.firebaseapp.com
