--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-switch": "^7.0.0",
