feat: add verify token

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ NEXT_PUBLIC_storageBucket=single-link-88071.appspot.com
 NEXT_PUBLIC_messagingSenderId=860834027267
 NEXT_PUBLIC_appId=1:860834027267:web:09c2c21da01dd4948cfb36,
 NEXT_PUBLIC_measurementId=G-FEW74WRQSL
+
+NEXT_PUBLIC_SECRET_JWT=68ca301e-4cb0-4255-baed-96d9eeb625ca
