--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.3",
     "firebase": "^9.17.1",
+    "jsonwebtoken": "^9.0.0",
     "next": "12.3.1",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
@@ -26,6 +27,7 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
